refact: improve API